# tll

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  meson.build  meson_options.txt  tll.pc.in
.github/workflows/: ci.yml
bench/: binder.cc  callback-standalone.cc  callback.cc  channel.cc  channel.rst  config.cc  meson.build  refcount.cc  ring.cc  stat.cc  time.cc  timeit.h
debian/: .gitignore  changelog  control  libtll-bin.install  libtll-dev.install  libtll0.install  libtll0.symbols  python3-tll.install  rules
doc/: Doxyfile  build.rst  channel.rst  channels.rst  file.rst  logger.rst  makefile  meson.build  processor.rst  scheme.rst  stat.rst  stream.rst  tll.css  tll.rst
examples/: chains.yaml  defaults.yaml  echo.yaml  resolve-client.yaml  resolve-server.yaml  spdlog.yaml  stat.yaml
examples/python/: colorlog.yaml  echo.py  echo.yaml
python/: .gitignore  CMakeLists.txt  bench.py  bench.yaml  meson.build  pytest.ini  setup.cfg  setup.py  tll-pyprocessor  tll-resolve-browse  tll-schemegen
python/bench/: channel.yaml  unpack.py
python/src/: channel.c
python/test/: conftest.py  decimal128.yaml  test_async.py  test_asynctll.py  test_basic.py  test_channel.py  test_chrono.py  test_config.py  test_convert.py  test_curl.py  test_decimal128.py  test_echo.py  test_file.py  test_framed.py  test_json.py  test_logger.py  test_logic_control.py  test_logic_quantile.py  test_logic_resolve.py  test_logic_rtt.py  test_logic_stat.py  test_loop.py  test_processor.py  test_pub.py  test_rate.py  test_reopen.py  test_resolve.py  test_rotate.py  test_scheme.py  test_stat.py  test_stream.py  test_tcp.py  test_timer.py  test_url.py  test_version.py  test_yaml.py
python/tll/: __init__.py  asynctll.py  bits.py  buffer.pxd  chrono.py  config.pxd  config.pyx  conv.py  decimal128.pxd  decimal128.pyx  error.py  logger.pxd  logger.pyx  meson.build  s2b.pxd  s2b.pyx  scheme.pxd  scheme.pyx  stat.pxd  stat.pyx  test_util.py  url.py  version.pxd  version.pyx
python/tll/asynctll/: __init__.py  asyncio.py  bare.py
python/tll/channel/: __init__.py  base.pyx  channel.pxd  channel.pyx  common.pxd  common.pyx  context.pxd  context.pyx  impl.pxd  logic.py  meson.build  mock.py  prefix.py  reopen.pxd  reopen.pyx  resolve.py
python/tll/processor/: __init__.py  loop.pxd  loop.pyx  main.py  meson.build  mock.py  processor.pxd  processor.pyx
python/tll/templates/: cpp-binder.mako  cpp.mako  cpp.py  yaml.mako
src/: CMakeLists.txt  decimal128.cc  ld.script  meson.build  ring.c  scheme.cc  stat.cc  time.cc  version.c.in  version.h.in
src/channel/: CMakeLists.txt  async.cc  async.h  blocks.cc  blocks.h  blocks.rst  blocks.scheme.h  blocks.scheme.yaml  blocks.yaml  common.rst  context.cc  convert.h  convert.rst  curl-scheme.h  curl.cc  curl.h  direct.cc  direct.h  direct.rst  direct.yaml  emulate-control.h  emulate-control.hpp  file-init.h  file-scheme.h  file.cc  file.h  file.rst  file.yaml  filter.h  filter.rst  frame.rst  framed.cc  framed.h  impl.c  ipc.cc  ipc.h  ipc.rst  ipc.yaml  json.cc  json.h  (+78 more)
src/config/: config.cc  config.h  yaml.cc  yaml.h
src/logger/: common.h  logger.cc  meson.build  rotating_file_sink-inl.h  rotating_file_sink.h  spdlog.cc  spdlog.h  thread.h  util.h
src/logic/: control.cc  control.yaml  forward.cc  forward.rst  meson.build  quantile.cc  quantile.h  quantile.rst  quantile.yaml  resolve.yaml  rtt.cc  rtt.rst  rusage.h  stat.cc  stat.rst  stat.yaml
src/processor/: api.cc  chains.cc  chains.h  deps.cc  deps.h  loop.cc  main.cc  meson.build  processor.cc  processor.h  processor.rst  processor.yaml  scheme.h  worker.cc  worker.h
src/tll/: channel.h  config.h  cppring.h  logger.h  meson.build  processor.h  ring.h  scheme.h  stat.h
src/tll/channel/: autoseq.h  base.h  codec.h  convert-buf.h  event.h  event.hpp  frame.h  impl.h  lastseq.h  logic.h  module.h  prefix.h  rate.h  reopen.h  tagged.h  tcp-client-scheme.h  tcp-scheme.h  tcp.h  tcp.hpp  udp.h
src/tll/compat/: align.h  clock_gettime.h  expected.h  fallocate.h  filesystem.h  jthread.h  pwrite.h  strndup.h
src/tll/compat/fmt/: std.h
src/tll/conv/: base.h  bits.h  decimal128.h  fixed_point.h  float.h  integer.h  list.h  numeric.h
src/tll/logger/: impl.h  prefix.h
src/tll/processor/: loop.h  scheme.h
src/tll/scheme/: binder.h  conv.h  convert.h  encoder.h  error-stack.h  format.h  merge.h  optr-util.h  types.h  util.h
src/tll/scheme/channel/: direct.h  ipc.h  timer.h
src/tll/scheme/logic/: control.h  quantile.h  resolve.h  stat.h
src/tll/util/: argparse.h  bench.h  bin2ascii.h  bits.h  browse.h  buffer.h  conv-fmt.h  conv.h  cppring.h  cstring.h  curl++.h  decimal128.h  fixed_point.h  getter.h  hostport.h  json.h  listiter.h  lqueue.h  lz4block.h  markerqueue.h  memoryview.h  mmstruct.h  offset_iterator.h  ownedmsg.h  pointer_list.h  props.h  refptr.h  result.h  rusage.h  scoped_fd.h  size.h  sockaddr.h  string.h  tempfile.h  time.h  url.h  value_tree_check.h  varint.h  zlib.h
test/: CMakeLists.txt  generate128.py  meson.build  scheme-http.h  scheme-http.yaml  scheme-large-item.h  scheme-large-item.yaml  test_channel.cc  test_compat.h  test_config.cc  test_conv.cc  test_decimal128.cc  test_expected.cc  test_logger.cc  test_processor.cc  test_ring.cc  test_scheme.cc  test_scheme.yaml  test_scheme_binder.cc  test_stat.cc  test_util.cc
test/scheme/: c.yaml  import.yaml  sub.yaml
test/scheme/a/: scheme.yaml  sub.yaml
test/scheme/a/b/: scheme.yaml  sub.yaml
